--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,108 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>SpeedTrap</title>
-  <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+  <title><%= controller.controller_name.capitalize %> : <%= controller.action_name.capitalize %></title>
+        <%= yield :head %>
+  <%= stylesheet_link_tag 'pagination' %>
+  <%= stylesheet_link_tag 'scaffolds' %>
+  <%= stylesheet_link_tag 'default_table' %>
+        <!-- javascript_include_tag :defaults >
+        <script type="text/javascript">
+    Array.prototype.reduce = undefined;
+  </script --> 
+<script type="text/javascript">
+<!--
+    function toggle_visibility(id) {
+       var e = document.getElementById(id);
+       if(e.style.display == 'block')
+          e.style.display = 'none';
+       else
+          e.style.display = 'block';
+    }
+//-->
+  
+</script>
 </head>
 <body>
 
-<%= yield %>
+<% if current_event != nil %>
+  <font class="event_title">
+  <%= current_event.name %><br>
+  <%= current_event.event_date %><br>
+  </font>
+<% end %>
 
+<%= image_tag "top.jpg", {:width => 202, :height => 4, :class => "top flt"} %>
+<div class="menubg flt">
+
+<!-- <font class="menu categories">View Data</font> -->
+<% if current_event != nil %>
+  <font class="menu categories">Event Data</font>
+  <ul class="menu flt">
+    <li><%= link_to 'Live Data', "" %></li>
+    <li><%= link_to 'Fastest 10', "" %></li>
+    <li><%= link_to 'All Participant Times', "" %></li>
+    <li><%= link_to 'Entrants', entrants_path %></li>
+  </ul>
+<% end %>
+<% if current_user != nil and current_user.authorized?(:data_entry) %>
+  <font class="menu categories">Data Entry</font>
+  <ul class="menu flt">
+    <li><%= link_to 'Events', url_for("/events") %></li>
+    <li><%= link_to 'System Settings', url_for("/system_settings/1") %></li>
+    <% if current_event != nil %>
+      <% Station.find(:all, :conditions => "event_id = #{current_event.id}", :order => 'name DESC').each do |s| %>
+        <li><%= link_to s.name, station_path(:id => s.id) %></li>
+      <% end %>
+    <% end %>
+  </ul>
+  <a onclick="toggle_visibility('data_types');"><font class="menu categories">Data Types</font></a><br />
+  <div id="data_types" style='display:none;'>
+    <ul class="menu flt">
+      <li><%= link_to 'Stations', stations_path %></li>
+      <li><%= link_to 'Vehicle Classes', vehicle_classes_path %></li>
+      <li><%= link_to 'Users', "" %></li>
+    </ul>
+  </div>
+<% end %>
+
+
+<ul class="menu flt">
+  <% if user_signed_in? %>
+    <li><%= link_to "Log out", url_for("/logout") %></li>
+  <% else %>
+    <li><%= link_to "Log in", url_for("/login") %></li>
+  <% end %>
+</div>
+<%= image_tag "bot.jpg", {:width => 202, :height => 3, :class => "bot flt"} %>
+<div class="menu flt" style="background-color:#fafafa" align='center'>
+  <br />
+  <% form_tag('/vehicles/1', :method => :get) do %>
+    <%= text_field_tag 'car_number', @mac, :size => 19 %><br />
+    <%= submit_tag 'Search for Car #' %>
+  <% end %>
+  <br />
+  <% unless flash[:error].blank? %>
+    <div class="errorExplanation"><%= flash[:error] %></div>
+  <% end %>
+
+  <% unless flash[:notice].blank? %>
+    <div id="noticeExplanation" width='5%'><%= flash[:notice] %></div>
+  <% end %>
+</div>
+
+<div id="controlPanel">
+  <%= yield :control_panel %>
+</div>
+<div id="iconPanel">
+  <%= yield :icon_panel %>
+</div>
+
+<div id="content">
+  <%= yield  %>
+</div>
 </body>
 </html>
