--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
   <% end %>
   <br />
   <% unless flash[:error].blank? %>
-    <div class="errorExplanation"><%= flash[:error] %></div>
+    <div id="errorExplanation"><%= flash[:error] %></div>
   <% end %>
 
   <% unless flash[:notice].blank? %>
