--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :event_date %><br />
     <%= f.date_select :event_date %>
   </div>
+  <div class="field">
+    <%= f.label :award_speed %> - 999 disables<br />
+    <%= f.text_field :award_speed %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
