--- a/app/views/stations/_form.html.erb
+++ b/app/views/stations/_form.html.erb
@@ -20,20 +20,40 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
+    <%= f.label :station_code %><br />
+    <%= f.text_field :station_code %>
+  </div>
+  <div class="field">
     <%= f.label :trap_1_name %><br />
     <%= f.text_field :trap_1_name %>
+  </div>
+  <div class="field">
+    <%= f.label :trap_1_sensor_id %><br />
+    <%= f.text_field :trapid_1 %>
   </div>
   <div class="field">
     <%= f.label :trap_2_name %><br />
     <%= f.text_field :trap_2_name %>
   </div>
   <div class="field">
+    <%= f.label :trap_2_sensor_id %><br />
+    <%= f.text_field :trapid_2 %>
+  </div>
+  <div class="field">
     <%= f.label :trap_3_name %><br />
     <%= f.text_field :trap_3_name %>
   </div>
   <div class="field">
+    <%= f.label :trap_3_sensor_id %><br />
+    <%= f.text_field :trapid_3 %>
+  </div>
+  <div class="field">
     <%= f.label :trap_4_name %><br />
     <%= f.text_field :trap_4_name %>
+  </div>
+  <div class="field">
+    <%= f.label :trap_4_sensor_id %><br />
+    <%= f.text_field :trapid_4 %>
   </div>
   <div class="actions">
     <%= f.submit %>
