--- a/app/views/trap_speeds/_form.html.erb
+++ b/app/views/trap_speeds/_form.html.erb
@@ -35,6 +35,10 @@
     <%= f.label :trap_number %><br />
     <%= f.number_field :trap_number %>
   </div>
+  <div class="field">
+    <%= f.label :speed %><br />
+    <%= f.number_field :speed %> MPH
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
