--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <b>Name:</b>
   <%= @event.name %>
@@ -11,5 +9,7 @@
 </p>
 
 
-<%= link_to 'Edit', edit_event_path(@event) %> |
+<% if current_user != nil and current_user.authorized?(:data_entry) %>
+  <%= link_to 'Edit', edit_event_path(@event) %> |
+<% end %>
 <%= link_to 'Back', events_path %>
