--- a/app/views/entrants/show.html.erb
+++ b/app/views/entrants/show.html.erb
@@ -57,7 +57,7 @@
 <% end %>
 
 <% top_speed = @entrant.top_speed %>
-<h1>Top Speed : <%= top_speed %></h1>
+<h1>Top Speed : <%= top_speed %> MPH</h1>
 <table>
   <tr>
     <th>Time</th>
