--- a/app/views/stations/_update_trap.html.erb
+++ b/app/views/stations/_update_trap.html.erb
@@ -1,6 +1,8 @@
 <%= Time.now %> <br>
 <% default_entrant_id = String.new %>
 <% default_entrant_id = @entrant_on_deck.id if @entrant_on_deck != nil %>
+<% default_entrant_number = String.new %>
+<% default_entrant_number = @entrant_on_deck.number if @entrant_on_deck != nil %>
 <% if @trap_speeds == nil %>
   No Data Found
 <% else %>
@@ -9,8 +11,9 @@
     <%= form_tag '/update_run_data', :remote => true, :'data-update-target' => 'trap_1_div'  %>
       Capture Time : <%= ts.capture_time_to_timestamp %> <br />
       &nbsp;&nbsp;Speed : <%= ts.speed %> MPH &nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;Vehicle # : <%= select_tag "entrant_id",
-                          options_for_select(event_entrants.collect {|e| ["#{e.entrant_string}", e.id] }, default_entrant_id ), { :include_blank => true } %>
+      &nbsp;&nbsp;Vehicle # : <!-- select_tag "entrant_id",
+                          options_for_select(event_entrants.collect {|e| ["#{e.entrant_string}", e.id] }, default_entrant_id ), { :include_blank => true } -->
+                          <%= text_field_tag 'vehicle_number', default_entrant_number %>
       &nbsp;&nbsp;&nbsp;<label>
         <span title="This will mark this entry as invalid, and it will not be associated with a run"><%= check_box_tag 'mark_invalid' %> Invalid</span>
       </label>
