--- a/app/views/trap_speeds/_form.html.erb
+++ b/app/views/trap_speeds/_form.html.erb
@@ -39,6 +39,10 @@
     <%= f.label :speed %><br />
     <%= f.number_field :speed %> MPH
   </div>
+  <div class="field">
+    <%= f.label :comment %><br />
+    <%= f.number_field :comment %> MPH
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
