--- a/app/views/entrants/index.html.erb
+++ b/app/views/entrants/index.html.erb
@@ -19,7 +19,7 @@
     <% end %>
   </tr>
 
-<% @entrants.each do |entrant| %>
+<% @entrants.sort { |a,b| a.number <=> b.number }.each do |entrant| %>
   <tr>
     <td><%= link_to entrant.name, entrant %></td>
     <% if current_user != nil and current_user.authorized?(:edit_entrants) %>
