--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <%= stylesheet_link_tag 'pagination' %>
   <%= stylesheet_link_tag 'scaffolds' %>
   <%= stylesheet_link_tag 'default_table' %>
+   <%= csrf_meta_tag %>
         <!-- javascript_include_tag :defaults >
         <script type="text/javascript">
     Array.prototype.reduce = undefined;
@@ -25,7 +26,10 @@
 //-->
   
 </script>
+  <%= stylesheet_link_tag :all %>
+
   <%= javascript_include_tag "jquery.js" %>
+  <%= javascript_include_tag "rails" %>
 </head>
 <body>
 
