added trap_speeds to menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,6 +68,7 @@
   <div id="data_types" style='display:none;'>
     <ul class="menu flt">
       <li><%= link_to 'Stations', stations_path %></li>
+      <li><%= link_to 'All Trap Speeds', trap_speeds_path %></li>
       <li><%= link_to 'Vehicle Classes', vehicle_classes_path %></li>
       <li><%= link_to 'Users', "" %></li>
     </ul>
