fix fing problem with jquery

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -203,7 +203,7 @@ margin:0px 0px 0px 0px;
 	background:url(/images/menubg2.jpg) no-repeat;
 	padding:4px 0 0 8px;
 	}
-*html .menu a, .menu a:visited {
+html .menu a, .menu a:visited {
 	width:186px;
 	height:22px;
 	margin:0px 0px 2px -32px;
